--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,28 +1,24 @@
 {
-  "About": "Acerca de",
+  "About": "Tentang",
   "Policy": "Politica",
-  "Mission": "Misión",
-  "Product": "Producto",
-  "Tell us everything": "Cuéntanos todo",
-  "Contact": "Contacto",
-  "Do you have any question? Feel free to reach out.": "¿Tienes alguna pregunta? No dude en contactarnos",
-  "Let's Chat": "Charlemos",
-  "Application Security": "Seguridad de la aplicación",
-  "Software Principles": "Principios de software",
-  "Support Center": "Centro de Apoyo",
-  "Customer Support": "Atención al cliente",
-  "Address": "Habla A",
-  "Press": "Prensa",
-  "Careers & Culture": "Carreras & cultura",
-  "Language": "Language",
-  "Explore": "Explorar",
+  "Mission": "Misi",
+  "Product": "Produk",
+  "Do you have any question? Feel free to reach out.": "Apakah anda memiliki pertanyaan? Silahkan hubungi kami",
+  "Twilight Teams provides solutions and insight based on your business problem. Our technology is here to help you achieve your business goal. We listen to your problem.": "Twilight Teams memberikan solusi dan wawasan berdasarkan masalah bisnis Anda. Teknologi kami hadir untuk membantu Anda mencapai tujuan bisnis Anda. Kami mendengarkan masalah Anda.",
+  "Address": "Alamat",
+  "Language": "Bahasa",
   "Learn more": "Más información",
   "Get started": "Comenzar",
-  "Submit": "Enviar",
-  "Message" : "Mensaje",
-  "Your Message": "Tu Mensaje",
-  "Name" : "Nombre",
-  "Your Name": "Tu nombre",
-  "Email" : "Email",
-  "Your Email": "Tu correo electrónico"
+  "Submit": "Kirim",
+  "Message": "Pesan",
+  "Your Message": "Pesan Anda",
+  "Name": "Nama",
+  "Your Name": "Nama Anda",
+  "Email": "Email",
+  "Your Email": "Email Anda",
+  "Why Your Business Needs Mobile Apps and Web?": "Mengapa Bisnis Anda Membutuhkan Mobile Apps dan Web ?",
+  "We develop your mobile apps and web not only as a tool of storage, organizing documents, and updating your data real time. Our mobile apps will further help you to get insights to make important business decision.": "Kami mengembangkan Mobile Apps dan Web Anda tidak hanya sebagai alat penyimpanan, mengatur dokumen, dan memperbarui data Anda secara real time. Mobile Apps & Web kami selanjutnya akan membantu Anda mendapatkan wawasan untuk membuat keputusan bisnis yang penting.",
+  "Our Awesome Services": "Layanan Terbaik Kami",
+  "Growing exponentially with our solution. We develop a solution for you through these 4 commitments": "Tumbuh secara eksponensial dengan solusi kami. Kami mengembangkan solusi untuk Anda melalui 4 komitmen ini",
+  "Grow Exponentially with Custom Mobile Apps and Website Development": "Tumbuh Secara Eksponensial dengan Mobile Apps Khusus dan Web Development"
 }
